--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "whatsapp-web.js": "^1.19.4",
+    "qrcode": "^1.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
