--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "whatsapp_sender",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "^15.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.1",
-    "whatsapp-web.js": "^1.19.4",
-    "qrcode": "^1.5.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "name": "whatsapp_sender-js",
+    "version": "1.0.0",
+    "description": "A WhatsApp messaging service",
+    "main": "index.js",
+    "scripts": {
+      "start": "node app.js",
+      "dev": "next dev"
+    },
+    "dependencies": {
+      "dotenv": "^10.0.0",
+      "express": "^4.17.1",
+      "http": "^0.0.1-security",
+      "next": "latest",
+      "puppeteer": "^13.0.0",
+      "qrcode": "^1.4.4",
+      "socket.io": "^4.4.1",
+      "whatsapp-web.js": "^1.14.1"
+    },
+    "devDependencies": {
+      "nodemon": "^2.0.7"
+    },
+    "author": "HassanMelid",
+    "license": "MIT"
   }
-}
