--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
     "name": "whatsapp_sender-js",
     "version": "1.0.0",
-    "description": "A WhatsApp messaging service",
-    "main": "index.js",
+    "description": "A WhatsApp messaging service with Next.js frontend",
+    "main": "server.js",
     "scripts": {
-        "start": "node app.js",
-        "dev": "cross-env NODE_OPTIONS='--inspect' next dev"
+        "dev": "next build && node server.js",
+        "build": "next build",
+        "start": "NODE_ENV=production next build && node server.js"
     },
     "dependencies": {
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "http": "^0.0.1-security",
         "next": "latest",
         "puppeteer": "^24.4.0",
-        "qrcode": "^1.4.4",
-        "socket.io": "^4.4.1",
-        "socket.io-client": "^4.4.1",
-        "whatsapp-web.js": "^1.14.1"
+        "qrcode": "^1.5.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
+        "whatsapp-web.js": "^1.23.0"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "source-map-loader": "^4.0.1"
     },
     "author": "HassanMelid"
 }
